<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add a new movie</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    
    <!-- Detail Activity Fragment -->
    <string name="title_activity_details">DetailsActivity</string>
    <string name="detail_item_rt">Tomato Rating</string>
    <string name="detail_item_rating">My Rating</string>
    <string name="detail_item_directed_by">Director: </string>
    <string name="detail_item_starring">Starring: </string>

    <!-- Internet Search Activity Fragment -->
    <string name="title_activity_internet_search">InternetSearchActivity</string>
    <string name="enter_a_movie">Enter a movie</string>
    <string name="button_search">Search</string>

    <!-- Add Edit Movie Fragment -->
    <string name="title_activity_add_edit">Add/Edit a movie</string>
    <string name="add_edit_pic">Enter a pic URL</string>
    <string name="add_edit_preview">Preview</string>
    <string name="add_edit_title">What\'s the movie title?</string>
    <string name="add_edit_year">When was it released?</string>
    <string name="add_edit_genre">Genre</string>
    <string name="add_edit_rating_select">Pick an MPAA rating</string>
    <string name="add_edit_rating_UR">Unrated</string>
    <string name="add_edit_rating_G">G</string>
    <string name="add_edit_rating_PG">PG</string>
    <string name="add_edit_rating_PG13">PG-13</string>
    <string name="add_edit_rating_R">R</string>
    <string name="add_edit_rating_NC17">NC-17</string>
    <string name="add_edit_runtime">Movie length (minutes)?</string>
    <string name="add_edit_description">Describe the movie</string>
    <string name="add_edit_my_rating">Want to rate this movie?</string>
    <string name="add_edit_cast">Who\'s in the movie?</string>
    <string name="add_edit_director">Who directed the movie?</string>

    <!-- Add Genres Dialog -->
    <string name="genre_fragment_title">Genres:</string>
    <string name="genre_dialog_action_adventure">Action &amp; Adventure</string>
    <string name="genre_dialog_animated">Animated</string>
    <string name="genre_dialog_art_intnl">Art House &amp; International</string>
    <string name="genre_dialog_classics">Classics</string>
    <string name="genre_dialog_comedy">Comedy</string>
    <string name="genre_dialog_drama">Drama</string>
    <string name="genre_dialog_horror">Horror</string>
    <string name="genre_dialog_kids_family">Kids &amp; Family</string>
    <string name="genre_dialog_mystery_suspense">Mystery &amp; Suspense</string>
    <string name="genre_dialog_romance">Romance</string>
    <string name="genre_dialog_scifi_fantasy">Science Fiction &amp; Fantasy</string>
    <string name="genre_dialog_documentary">Documentary</string>
    <string name="genre_dialog_music_performingarts">Musical &amp; Performing Arts</string>
    <string name="genre_dialog_specialinterest">Special Interest</string>
    <string name="genre_dialog_sports_fitness">Sports &amp; Fitness</string>
    <string name="genre_dialog_tv">Television</string>
    <string name="genre_dialog_western">Western</string>

</resources>