<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.movies_lefkowitz.Add_Edit_Activity$PlaceholderFragment" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/add_edit_screen"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/add_edit_pic_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/add_edit_thumb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxHeight="130dp"
                        android:src="@drawable/thumb" />

                    <ImageView
                        android:id="@+id/add_edit_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/add_edit_thumb"
                        android:layout_alignTop="@+id/add_edit_thumb"
                        android:adjustViewBounds="true"
                        android:alpha=".7"
                        android:maxHeight="30dp"
                        android:src="@drawable/checkmark_grey" />

                    <ProgressBar
                        android:id="@+id/add_edit_pb"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/add_edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_edit_title" >

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/add_edit_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_edit_year" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/add_edit_reload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/add_edit_reload" />

            <TextView
                android:id="@+id/add_edit_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="3dp"
                android:hint="@string/add_edit_genre"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/add_edit_rating_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="5dp"
                android:hint="@string/add_edit_rating_select"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/add_edit_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_edit_runtime"
                android:inputType="number" />

            <EditText
                android:id="@+id/add_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_edit_description"
                android:inputType="textMultiLine" >
            </EditText>

            <TextView
                android:id="@+id/add_edit_my_rating_TV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="3dp"
                android:hint="@string/add_edit_my_rating"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/add_edit_my_rating_SB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:stepSize="1" />

                <TextView
                    android:id="@+id/add_edit_my_rating_TV2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0/10"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/add_edit_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_edit_cast" />

            <EditText
                android:id="@+id/add_edit_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_edit_director" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/add_edit_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/add_edit_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>