<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/detail_item_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/thumb" />

            <ImageView
                android:id="@+id/detail_item_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/detail_item_thumb"
                android:layout_alignTop="@+id/detail_item_thumb"
                android:adjustViewBounds="true"
                android:alpha=".7"
                android:maxHeight="30dp"
                android:src="@drawable/checkmark_grey" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detail_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Die Hard"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_item_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="(1987)"
                    android:textSize="17sp"
                    android:color="#999" />
            </LinearLayout>

            <TextView
                android:id="@+id/detail_item_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Action | Thriller"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <ImageView
                    android:id="@+id/detail_item_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:adjustViewBounds="true"
                    android:maxHeight="18dp"
                    android:src="@drawable/mpaa_restricted" />

                <TextView
                    android:id="@+id/detail_item_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="2 hrs 12 mins"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/detail_item_rt_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:maxHeight="35dp"
                    android:src="@drawable/rt_fresh" />

                <TextView
                    android:id="@+id/detail_item_rt_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/detail_item_rt_icon"
                    android:paddingTop="5dp"
                    android:text="8.5"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/detail_item_my_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/detail_item_my_rating_icon"
                    android:paddingTop="5dp"
                    android:text="9.5"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/detail_item_my_rating_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="47dp"
                    android:layout_toRightOf="@+id/detail_item_rt_rating"
                    android:adjustViewBounds="true"
                    android:maxHeight="35dp"
                    android:src="@drawable/star_icon" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/detail_item_textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/detail_item_rt"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/detail_item_textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/detail_item_rating"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/detail_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="John McClane, officer of the NYPD, tries to save wife Holly Gennaro and several others, taken hostage by German terrorist Hans Gruber during a Christmas party at the Nakatomi Plaza in Los Angeles."
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/detail_item_starring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_item_starring"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_item_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Bruce Willis, Alan Rickman"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/detail_item_directed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_item_directed_by"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_item_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Placeholder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>